--- a/chest_custom/package.json
+++ b/chest_custom/package.json
@@ -12,11 +12,14 @@
     "chess.js": "^1.0.0-beta.4",
     "react": "^18.2.0",
     "react-chessboard": "^2.1.3",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
