--- a/chest_custom/package.json
+++ b/chest_custom/package.json
@@ -14,6 +14,7 @@
     "react-chessboard": "^2.1.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
