--- a/chest_custom/package.json
+++ b/chest_custom/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ionic/react": "^7.0.3",
     "aws-amplify": "^5.1.2",
+    "axios": "^1.3.6",
     "chess.js": "^1.0.0-beta.4",
     "react": "^18.2.0",
     "react-chessboard": "^2.1.3",
