--- a/chest_custom/package.json
+++ b/chest_custom/package.json
@@ -18,12 +18,14 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "socket.io-client": "^4.6.1",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^3.1.0",
     "node-libs-browser": "^2.2.1",
     "typescript": "^4.9.3",
