--- a/chest_custom/package.json
+++ b/chest_custom/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ionic/react": "^7.0.3",
+    "@types/chess.js": "^0.13.4",
     "aws-amplify": "^5.1.2",
     "axios": "^1.3.6",
     "chess.js": "^1.0.0-beta.4",
